fix title font size on mobile view

--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -191,7 +191,7 @@
   }
 
   .title {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     letter-spacing: 2px;
   }
 
